2006-12-15  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/navigation-tree.c:
	  - Fix regressions with autojoin and autoconnect.
	    Bug #385515.

2006-12-15  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.c:
	  - This time I really mean it.

2006-12-15  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.c:
	  - Actually fix hilighting.  For real this time.

2006-12-14  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/navigation-tree.c:
	  - Fix a couple navtree-related regressions with hilighting and
	    the userlist. Bug #385515.

2006-12-10  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	* autogen.sh:
	  - Bump the minimum required version of autoconf to 2.60, since it's
	    the minimum required version :)

2006-12-10  Christian Persch  <chpe@cvs.gnome.org>

	* data/icons/hicolor/128x128/apps/Makefile.am:
	* data/icons/hicolor/16x16/apps/Makefile.am:
	* data/icons/hicolor/22x22/apps/Makefile.am:
	* data/icons/hicolor/48x48/apps/Makefile.am:
	* data/icons/hicolor/scalable/apps/Makefile.am:
	  - Install the icons in the app sharedir, not the global one.

	* src/fe-gnome/Makefile.am:
	* src/fe-gnome/pixmaps.c: (pixmaps_init):
	  - Append the app icon dir to the theme directories, so xchat-gnome
	    can find its icons. Bug #384160.

2006-12-10  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.h:
	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/main-window.c:
	* src/fe-gnome/gui.c:
	* src/fe-gnome/gui.h:
	* src/fe-gnome/navigation-tree.c:
	* data/xchat-gnome-ui.xml:
	  - Set action sensitivity correctly.

2006-12-09  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/navigation-tree.h:
	* src/fe-gnome/navigation-tree.c:
	  - Implement a couple more loose ends from the navtree rework.

2006-12-09  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c: