@@ -1,3 +1,8 @@
+2006-12-18  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/fe-gnome/conversation-panel.c: (copy_text):
+	  - Set PRIMARY too on CopyLinkAddress. Bug #386766.
+
 2006-12-15  Guillaume Desmottes <cass@skynet.be>
 
 	* src/fe-gnome/navigation-tree.c:
